Changelog of lizard-waterbalance
===================================================


0.9 (unreleased)
----------------

- Nothing changed yet.


0.8 (2011-02-17)
----------------

- The waterbalance apps has been made better reusable.


0.7 (2011-02-14)
----------------

- The waterbalance is recomputed each time the user views a waterbalance
  graph. To save time, the results are not stored in the database.


0.6 (2011-02-09)
----------------

- Due to rounding errors, it was possible the different fractions did not add
  up to 1.0.

- The fraction distribution graph displays the chloride levels.

- The phosphate impact graph can be shown.

0.5 (2011-02-02)
----------------

- The fractions are also computed and stored for the intakes and pumps.


0.4 (2011-01-31)
----------------

- Implemented the ground work for the waterbalance summary screen.

- Implemented the ground work for the waterbalance fraction graph.

- The fraction calculation time series are stored in the database.


0.3 (2011-01-27)
----------------

- Added a missing shape file.


0.2 (2011-01-27)
----------------

- Test release

0.1 (unreleased)
----------------

- Initial library skeleton created by nesskel.  [Pieter Swinkels, Reinout van
  Rees]