@@ -10,7 +10,7 @@
 {% endblock portal-tabs %}
 
 {% block sidebar %}
-<div class="sidebarbox sidebarbox-stretched">
+<div class="sidebarbox">
   <h2>
     Info
     <span class="ss_sprite ss_calendar_view_day sidebarbox-action-icon popup-trigger"
@@ -32,32 +32,49 @@
     <dl>
       <dt>Naam</dt>
       <dd>{{ waterbalance_area.name }}</dd>
+      <dt>Oppervlak</dt>
       <dd>402614 m2</dd>
     </dl>
-    <dl>
-      <dt>Bakjes</dt>
-      <dd>ongedraineerd: 2950181 m2</dd>
-      <dd>gedraineerd: 3697465 m2</dd>
-      <dd>verhard: 1217463 m2</dd>
-    </dl>
   </div>
-  {{ graphtype_selection_form.as_p }}
-  <input type="hidden" name="area" value="{{ waterbalance_area.slug }}" id="area">
-  <input type="button" name="apply" value="{% trans "Apply" %}" id="apply">
-
-
-
 </div>
+<div class="sidebarbox">
+  <h2>Bakjes</h2>
+  <div>
+    <dl>
+      <dt>Ongedraineerd</dt>
+      <dd>2950181 m2</dd>
+      <dt>Gedraineerd</dt>
+      <dd>3697465 m2</dd>
+      <dt>Verhard</dt>
+      <dd>1217463 m2</dd>
+    </dl>
+    <form method="POST"
+          action="{% url waterbalance_graph_recalculate_data waterbalance_area.slug %}">
+      {% csrf_token %}
+      <input type="submit" 
+             value="Bereken grafiekdata opnieuw" />
+    </form>
+    <!-- TODO: add ajax interaction instead of effectively reloading
+         this page upon submit. -->
+  </div>
+</div>
+<div class="sidebarbox sidebarbox-stretched">
+  <h2>Grafieken</h2>
+  <div>
+    <form>
+      <!-- TODO: turn this into a proper form -->
+      {{ graphtype_selection_form.as_p }}
+      <input type="hidden" name="area" value="{{ waterbalance_area.slug }}" id="area">
+      <input type="button" name="apply" value="Toon" id="apply">
+    </form>
+  </div>
+</div>
+
 {% endblock %}
 
 
 {% block content %}
 <div id="evenly-spaced-vertical">
-  <div class="vertical-item img-use-my-size">
-    <a class="replace-with-image"
-       href="{% url waterbalance_area_graph area=waterbalance_area.slug graph_type=landelijk %}?name=openwater">
-      waterbalance area graph
-    </a>
-  </div>
+  <p>Selecteer links grafieken.</p>
 </div>
 {% endblock %}
