@@ -19,6 +19,10 @@ urlpatterns = patterns(
      {},
      'waterbalance_area_summary',
      ),
+    (r'^summary/(?P<area>.*)/recalculate_graph_data/$',
+     'lizard_waterbalance.views.recalculate_graph_data',
+     {},
+     "waterbalance_graph_recalculate_data"),
     (r'^summary/(?P<area>.*)/(?P<graph_type>.*)/$',
      'lizard_waterbalance.views.waterbalance_area_graphs',
      {},
